--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_form.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_form.html
@@ -13,7 +13,7 @@
     <div class="form">
       {% if form.email.errors %} {{ form.email.errors }} {% endif %}
           <p>{{ form.email }}</p>
-      <input type="submit" class="btn btn-default btn-lg" value="Reset password" />
+      <input type="submit" class="btn btn-default btn-lg" value="Сбросить пароль" />
     </div>
   </form>
 {% endblock %}
