--- a/crmka/locallibrary/locallibrary/templates/basikPages/PageForChangeName.html
+++ b/crmka/locallibrary/locallibrary/templates/basikPages/PageForChangeName.html
@@ -70,19 +70,9 @@
 </head>
 <body>
     <h1>Редактирование профиля</h1>
-    <form class="profile-form">
-        <label for="name">ФИО:</label>
-        <input type="text" id="name" name="name" value="">
-        
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="">
-        
-        <label for="phone">Телефон:</label>
-        <input type="tel" id="phone" name="phone" value="">
-        
-        <label for="password">Новый пароль:</label>
-        <input type="password" id="password" name="password">
-        
+    <form class="profile-form" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
         <button type="submit" class="btn">Сохранить изменения</button>
     </form>
 </body>
