--- a/crmka/locallibrary/locallibrary/templates/registration/logged_out.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/logged_out.html
@@ -1,7 +1,50 @@
-{% extends "base_generic.html" %}
 
-{% block content %}
-  <p>Вышел из системы!</p>
+<style>
+    body {
+        background: linear-gradient(135deg, #008000, #CD00CD, #000000);
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        text-align: center;
+        font-family: Arial, sans-serif;
+    }
 
-  <a href="{% url 'login'%}">Нажмите здесь, чтобы войти снова.</a>
-{% endblock %}
+    .container {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        width: 100%;
+        max-width: 400px;
+    }
+
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+    }
+
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 1.2rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        color: #fff;
+        background: #30c023ca;
+        transition: background 0.3s;
+    }
+
+    .button:hover {
+        background: #900090;
+    }
+</style>
+
+<div class="container">
+    <h1>Вы успешно вышли из системы!</h1>
+    <a href="{% url 'login' %}" class="button">Войти снова</a>
+</div>
