--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_done.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_done.html
@@ -1,8 +1,56 @@
+<style>
+    body {
+        background: linear-gradient(135deg, #008000, #CD00CD, #000000);
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        text-align: center;
+        font-family: Arial, sans-serif;
+    }
 
-{% extends "base_generic.html" %}
+    .container {
+        background: rgba(255, 255, 255, 0.1);
+        padding: 70px;
+        border-radius: 10px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        width: 100%;
+        max-width: 400px;
+    }
 
-{% block content %}
-  <p>
-    Мы отправили вам по электронной почте инструкции по установке пароля. Если они не пришли в течение нескольких минут, проверьте папку со спамом.
-  </p>
-{% endblock %}
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 20px;
+    }
+
+    p {
+        font-size: 1.1rem;
+        margin-bottom: 15px;
+    }
+
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 1.2rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-decoration: none;
+        color: #fff;
+        background: #30c023ca;
+        transition: background 0.3s;
+        width: 100%;
+    }
+
+    .button:hover {
+        background: #900090;
+    }
+</style>
+
+<div class="container">
+    <h1>Письмо отправлено</h1>
+    <p>Мы отправили вам инструкции по установке пароля на вашу электронную почту. Если письмо не пришло в течение нескольких минут, проверьте папку со спамом.</p>
+    <a href="{% url 'login' %}" class="button">Вернуться к входу</a>
+</div>
