--- a/crmka/locallibrary/locallibrary/templates/registration/password_reset_email.html
+++ b/crmka/locallibrary/locallibrary/templates/registration/password_reset_email.html
@@ -1,3 +1,55 @@
-
-Кто-то запросил сброс пароля для электронной почты {{ email }}. Перейдите по ссылке ниже:
-{{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Сброс пароля</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        .email-container {
+            background: linear-gradient(135deg, #008000, #CD00CD, #000000);
+            padding: 30px;
+            border-radius: 10px;
+            max-width: 500px;
+            margin: auto;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1rem;
+            margin-bottom: 20px;
+        }
+        .button {
+            display: inline-block;
+            padding: 12px 25px;
+            font-size: 1.2rem;
+            border-radius: 5px;
+            text-decoration: none;
+            color: #fff;
+            background: #30c023ca;
+            transition: background 0.3s;
+        }
+        .button:hover {
+            background: #900090;
+        }
+    </style>
+</head>
+<body>
+    <div class="email-container">
+        <h1>Сброс пароля</h1>
+        <p>Кто-то запросил сброс пароля для вашей учетной записи. Если это были не вы, просто проигнорируйте это письмо.</p>
+        <p>Чтобы сбросить пароль, нажмите на кнопку ниже:</p>
+        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}" class="button">Сбросить пароль</a>
+       
+    </div>
+</body>
+</html>
